--- a/index.html
+++ b/index.html
@@ -9,28 +9,36 @@
 <body>
 <nav>
     <div class="logo">
-        <p><a href="">NAME</a></p>
+        <p><a href="index.html">NAME</a></p>
     </div>
 	<ul>
 		<li><a href="index.html">Accueil</a></li>
-    <li><a href="me.html">A Propros de nous</a></li>
-    <li><a href="spectacle.html">Notre Mission</a></li>
+    <li><a href="#.html">.....</a></li>
+    <li><a href="#.html">.....</a></li>
     <li class="dropdown">
-      <a href="#" class="dropbtn">SMTH</a>
+      <a href="nous.html" class="dropbtn">A propros de nous</a>
       <div class="dropdown-content">
-        <a href="avare.html">SMTH</a>
-        <a href="chlifa.html">SMTH</a>
+		<a href="nous.html">A propros de nous</a>
+        <a href="mission.html">Mission</a>
+        <a href="sainte.html">Sainte Patronne</a>
       </div>
     </li>
    </ul>
 </nav>
 
-<br><br><br><br><br><br><br><hr>
+<br><br><br><br><br><br><br>
+<hr>
+<center>
+<h1>Accueil</h1>
+</center>
+<hr>
 
 <div class="container">
-<img src="" alt="Image of a book" width="300" height="350" class="image">
+<img src="" alt="Image" width="300" height="350" class="image">
 	<div class="boxed-text">
-		<a href="chlifa.html"><h1></h1></a>
+		<p>
+		<h1>TITRE</h1> DESCRIPTION DE L'ORGANIZATION
+		</p>
 	</div>
 </div>
 
