--- a/index.html
+++ b/index.html
@@ -3,22 +3,21 @@
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>NAME</title>
+    <title>Accueil</title>
     <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
 <nav>
     <div class="logo">
-        <p><a href="index.html">NAME</a></p>
+        <p><a href="index.html">Fondation STA</a></p>
     </div>
 	<ul>
 		<li><a href="index.html">Accueil</a></li>
-    <li><a href="#.html">.....</a></li>
-    <li><a href="#.html">.....</a></li>
+    <li><a href="chant.html">Chant</a></li>
+    <li><a href="valeurs.html">Valeurs</a></li>
     <li class="dropdown">
       <a href="nous.html" class="dropbtn">A propros de nous</a>
       <div class="dropdown-content">
-		<a href="nous.html">A propros de nous</a>
         <a href="mission.html">Mission</a>
         <a href="sainte.html">Sainte Patronne</a>
       </div>
@@ -34,10 +33,10 @@
 <hr>
 
 <div class="container">
-<img src="" alt="Image" width="300" height="350" class="image">
+<img src="" alt="Logo" width="300" height="350" class="image">
 	<div class="boxed-text">
 		<p>
-		<h1>TITRE</h1> DESCRIPTION DE L'ORGANIZATION
+		<h1>Fondation Sainte Thérèse d'Avila (STA)</h1> DESCRIPTION DE L'ORGANIZATION
 		</p>
 	</div>
 </div>
