--- a/nous.html
+++ b/nous.html
@@ -9,16 +9,15 @@
 <body>
 <nav>
     <div class="logo">
-        <p><a href="index.html">NAME</a></p>
+        <p><a href="index.html">Fondation STA</a></p>
     </div>
 	<ul>
 		<li><a href="index.html">Accueil</a></li>
-    <li><a href="#.html">.....</a></li>
-    <li><a href="#.html">.....</a></li>
+    <li><a href="chant.html">Chant</a></li>
+    <li><a href="valeurs.html">Valeurs</a></li>
     <li class="dropdown">
       <a href="nous.html" class="dropbtn">A propros de nous</a>
       <div class="dropdown-content">
-		<a href="nous.html">A propros de nous</a>
         <a href="mission.html">Mission</a>
         <a href="sainte.html">Sainte Patronne</a>
       </div>
