--- a/sainte.html
+++ b/sainte.html
@@ -9,16 +9,15 @@
 <body>
 <nav>
     <div class="logo">
-        <p><a href="index.html">NAME</a></p>
+        <p><a href="index.html">Fondation STA</a></p>
     </div>
 	<ul>
 		<li><a href="index.html">Accueil</a></li>
-    <li><a href="#.html">.....</a></li>
-    <li><a href="#.html">.....</a></li>
+    <li><a href="chant.html">Chant</a></li>
+    <li><a href="valeurs.html">Valeurs</a></li>
     <li class="dropdown">
       <a href="nous.html" class="dropbtn">A propros de nous</a>
       <div class="dropdown-content">
-		<a href="nous.html">A propros de nous</a>
         <a href="mission.html">Mission</a>
         <a href="sainte.html">Sainte patronne</a>
       </div>
@@ -34,7 +33,7 @@
 <hr>
 
 <div class="container">
-<img src="" alt="Sainte Thérèse d’Avila" width="300" height="350" class="image">
+<img src="https://th.bing.com/th/id/OIP.tkTRjBnkBn6kzNfoPzMSnwAAAA?w=202&h=270&c=7&r=0&o=7&dpr=1.5&pid=1.7&rm=3" alt="Sainte Thérèse d’Avila" width="300" height="350" class="image">
 	<div class="boxed-text">
 		<p>
 		<h1>Sainte Thérèse d’Avila</h1> DESCRIPTION
