--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <hr>
 
 <div class="container">
-<img src="" alt="Logo" width="300" height="350" class="image">
+<img src="logoR.png" alt="Logo" width="300" height="350" class="image">
 	<div class="boxed-text">
 		<p>
 		<h1>Fondation Sainte Thérèse d'Avila (STA)</h1> DESCRIPTION DE L'ORGANIZATION
