--- a/nous.html
+++ b/nous.html
@@ -33,7 +33,7 @@
 <hr>
 
 <div class="container">
-<img src="" alt="Logo" width="300" height="350" class="image">
+<img src="logoR.png" alt="Logo" width="300" height="350" class="image">
 	<div class="boxed-text">
 		<p>
 		<h1>TITRE</h1> DESCRIPTION
