--- a/chant.html
+++ b/chant.html
@@ -36,7 +36,7 @@
 <img src="https://th.bing.com/th/id/OIP.Pk3xujZ-iMyLFYMQViBufgHaHV?w=165&h=180&c=7&r=0&o=7&dpr=1.5&pid=1.7&rm=3" alt="chant" width="300" height="350" class="image">
 	<div class="boxed-text">
 		<p>
-		<h1>Titre</h1> LE CHANT
+		<h1>Unis ensemble</h1> Unis par l'amour, unis pour servir <br> Main dans la main, nous voulons bâtir <br> Chanter, partager, porter la lumière <br> Unis par l'amour, pour changer la terre
 		</p>
 	</div>
 </div>
