--- a/nous.html
+++ b/nous.html
@@ -36,7 +36,7 @@
 <img src="logoR.png" alt="Logo" width="300" height="350" class="image">
 	<div class="boxed-text">
 		<p>
-		<h1>TITRE</h1> DESCRIPTION
+		<h1>Fondation Sainte Thérèse d'Avila (STA)</h1> DESCRIPTION DE L'ORGANIZATION
 		</p>
 	</div>
 </div>
