--- a/sainte.html
+++ b/sainte.html
@@ -36,9 +36,21 @@
 <img src="https://th.bing.com/th/id/OIP.tkTRjBnkBn6kzNfoPzMSnwAAAA?w=202&h=270&c=7&r=0&o=7&dpr=1.5&pid=1.7&rm=3" alt="Sainte Thérèse d’Avila" width="300" height="350" class="image">
 	<div class="boxed-text">
 		<p>
-		<h1>Sainte Thérèse d’Avila</h1> DESCRIPTION
+		<h1>Sainte Thérèse d’Avila</h1> Sainte Thérèse d’Avila est une femme de prière et d’action. Durant sa vie, elle a servi Dieu à travers l’attention aux plus pauvres. A son exemple, nous croyons que l’amour se manifeste avec des gestes de gentillesse. Comme: accueillir, nourrir, et écouter ceux qui sont dans le besoin. Sainte Thérèse d’Avila nous a montré que chaque petit geste est gros dans les yeux de Dieu. Notre organisme veut servir avec amour en voyant chaque personne qu’on a aider comme un frère ou une sœur.
 		</p>
 	</div>
+</div>
+
+<div class="container">
+	<div class="boxed-text">
+		<p>
+		<h1>Un verset biblique</h1>
+		<h3>Mt 25, 34-45</h3>
+		<h5>Petit extrait: Mt 25, 35 <br> "Car j’ai eu faim, et vous m’avez donné à manger. J’ai eu soif, et vous m’avez donné à boire. J’étais un étranger, et vous m’avez accueilli chez vous."</h5>
+		Explication ici
+		</p>
+	</div>
+	<img src="" alt="Bible" width="300" height="350" class="image">
 </div>
 
 <script src="script.js"></script>
