--- a/sainte.html
+++ b/sainte.html
@@ -47,7 +47,7 @@
 		<h1>Un verset biblique</h1>
 		<h3>Mt 25, 34-45</h3>
 		<h5>Petit extrait: Mt 25, 35 <br> "Car j’ai eu faim, et vous m’avez donné à manger. J’ai eu soif, et vous m’avez donné à boire. J’étais un étranger, et vous m’avez accueilli chez vous."</h5>
-		Explication ici
+		Jésus enseigne ici que chaque acte a une valeur immense. Comme dans cet extrait de la bible nous voulons nourrir ceux qui ont faim, donner à boire à ceux qui ont soif, accueillir tout le monde en besoin. Chaque acte n’aide pas seulement ceux qui ont besoin de l’aide, mais ça nous rapproche de Dieu aussi.
 		</p>
 	</div>
 	<img src="https://th.bing.com/th/id/OIP.GjHX9BXvMADUhF8nBgA2HAHaJ4?w=160&h=214&c=7&r=0&o=7&dpr=1.5&pid=1.7&rm=3" alt="Bible" width="300" height="350" class="image">
