--- a/valeurs.html
+++ b/valeurs.html
@@ -37,9 +37,9 @@
 	<div class="boxed-text">
 		<p>
 		<h1>Nos valeurs</h1>
-		<h3>Charité</h3> DESCRIPTION
-		<h3>Justice social</h3> DESCRIPTION
-		<h3>Compassion</h3> DESCRIPTION
+		<h3>Charité</h3> Notre organisme a comme priorité l’amour du prochain. On démontre ça en offrant aide et réconfort à ceux qui en ont besoin.
+		<h3>Justice social</h3> Nous nous engageons à lutter contre l'exclusion et on promeut la dignité de chaque personne.
+		<h3>Compassion</h3> Nous accueillons chaque personne et on écoute et répond à leur souffrance avec des gestes d’entraide.
 		</p>
 	</div>
 </div>
