--- a/index.html
+++ b/index.html
@@ -41,6 +41,21 @@
 	</div>
 </div>
 
+<hr>
+<center>
+<h1>Bibliographie</h1>
+</center>
+<hr>
+
+<div class="container">
+	<div class="boxed-text">
+		<p>
+		<h1>Bibliographie</h1>
+		"Sainte Thérèse d’Avila" Hozana, <a href="https://hozana.org/saints/sainte-therese-d-avila">https://hozana.org/saints/sainte-therese-d-avila</a>. Consulté le 11 juin 2025.
+		</p>
+	</div>
+</div>
+
 <script src="script.js"></script>
 </body>
 </html>
