--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -36,8 +37,8 @@
 <img src="logoR.png" alt="Logo" width="300" height="350" class="image">
 	<div class="boxed-text">
 		<p>
-		<h1>Fondation Sainte Thérèse d'Avila (STA)</h1> DESCRIPTION DE L'ORGANIZATION
-		</p>
+		<h1>Fondation Sainte Thérèse d'Avila (STA)</h1>
+		Notre organisme, inspiré par Sainte Thérèse d’Avila, place au cœur de sa mission l’aide aux personnes pauvres et sans-abri. On fait ça en leur offrant des repas et un abri gratuit. Notre organisme s’appelle La fondation STA (Sainte Thérèse d’Avila) et nous croyons que chaque personne a une dignité unique et mérite d’être traitée avec respect. Notre sainte patronne, Sainte Thérèse d’Avila, est une femme de prière et d’action. Nous suivons l’exemple de témoins de foi comme La Mission d’Ottawa. De plus, un texte dans la bible qui représente bien notre service est Matthieu, chapitre 25, verset 35. Comme dans cet extrait de la bible nous voulons nourrir ceux qui ont faim, donner à boire à ceux qui ont soif, accueillir tout le monde en besoin.
 	</div>
 </div>
 
@@ -51,7 +52,20 @@
 	<div class="boxed-text">
 		<p>
 		<h1>Bibliographie</h1>
-		"Sainte Thérèse d’Avila" Hozana, <a href="https://hozana.org/saints/sainte-therese-d-avila">https://hozana.org/saints/sainte-therese-d-avila</a>. Consulté le 11 juin 2025.
+		<!-- Works cited, Web site (info from Mr. Hubbell):
+		Author, title of the article (in quotes),
+		title of the website (in italics), publication date,
+		name of responsible organisation, date of access, URL 
+		
+		AI DETECTOR: https://aihumanize.com/ai-detector/ -->
+
+		"Sainte Thérèse d’Avila" <i> Hozana, </i> (S.D) <a href="https://hozana.org/saints/sainte-therese-d-avila">https://hozana.org/saints/sainte-therese-d-avila</a>. Consulté le 11 juin 2025.
+		<br><br>
+		"Matthieu 25:34-45" <i> Bible Gateway </i> (S.D) <a href="https://www.biblegateway.com/passage/?search=Matthieu+25%3A34-45%2CMatthew+25%3A34-45&version=BDS%2CNIV">https://www.biblegateway.com/passage/?search=Matthieu+25%3A34-45%2CMatthew+25%3A34-45&version=BDS%2CNIV</a>. Consulté le 11 juin 2025.
+		<br><br>
+		"Ottawa Mission" <i> City of Ottawa, </i> (16 mai, 2025) <a href="https://ottawa.ca/en/arts-heritage-and-events/doors-open-ottawa/2025-buildings/ottawa-mission">https://ottawa.ca/en/arts-heritage-and-events/doors-open-ottawa/2025-buildings/ottawa-mission</a>. Consulté le 11 juin 2025.
+		<br><br>
+		"About" <i> The Ottawa Mission, </i> (S.D) <a href="https://ottawamission.com/about/">https://ottawamission.com/about/</a>. Consulté le 11 juin 2025.
 		</p>
 	</div>
 </div>
