--- a/mission.html
+++ b/mission.html
@@ -36,7 +36,8 @@
 <img src="https://th.bing.com/th/id/OIP.QI_HKimCkKoeEdxGkxezpwHaHa?pid=ImgDet&w=178&h=178&c=7&dpr=1.5" alt="Image" width="300" height="350" class="image">
 	<div class="boxed-text">
 		<p>
-		<h1>TITRE</h1> DESCRIPTION
+		<h1>Notre mission</h1>
+		La mission principale de notre organisme est d’offrir un abri gratuit, des repas et n'importe quoi qu'ils ont besoin aux personnes pauvres et sans-abri, en s’inspirant de l’exemple de Sainte Thérèse d’Avila. Véhiculer par des valeurs chrétiennes comme la charité, la justice sociale, et la compassion, nous croyons que chaque personne mérite d’être reconnue et aimée, sans discrimination. Nous travaillons pour défendre la dignité de chaque personne, lutter contre l’exclusion et bâtir une communauté plus solidaire et juste à Ottawa.
 		</p>
 	</div>
 </div>
