--- a/nous.html
+++ b/nous.html
@@ -36,7 +36,8 @@
 <img src="logoR.png" alt="Logo" width="300" height="350" class="image">
 	<div class="boxed-text">
 		<p>
-		<h1>Fondation Sainte Thérèse d'Avila (STA)</h1> DESCRIPTION DE L'ORGANIZATION
+		<h1>Fondation Sainte Thérèse d'Avila (STA)</h1>
+		Notre organisme, inspiré par Sainte Thérèse d’Avila, place au cœur de sa mission l’aide aux personnes pauvres et sans-abri. On fait ça en leur offrant des repas et un abri gratuit. Notre organisme s’appelle La fondation STA (Sainte Thérèse d’Avila) et nous croyons que chaque personne a une dignité unique et mérite d’être traitée avec respect. Notre sainte patronne, Sainte Thérèse d’Avila, est une femme de prière et d’action. Nous suivons l’exemple de témoins de foi comme La Mission d’Ottawa. De plus, un texte dans la bible qui représente bien notre service est Matthieu, chapitre 25, verset 35. Comme dans cet extrait de la bible nous voulons nourrir ceux qui ont faim, donner à boire à ceux qui ont soif, accueillir tout le monde en besoin.
 		</p>
 	</div>
 </div>
